--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 </head>
 <body>
     <div id="card-container">
-        <div>
-            <img id="logo-img" src="img/JL logo.png" alt="">
+        <div id="jl">
+            <a download href="Cartao_Visita_JL_Vinhos.pdf"><img id="logo-img" src="img/JL logo.png" alt="logo JL"></a>
         </div>
         <div id="hr"></div>
         <h1>Joel Leite</h1>
@@ -25,7 +25,7 @@
                 <p>Instagram</p>
             </div>
             <div class="link-container">
-                <a target="_blank" href=""><img class="link-img" src="img/email icon.png" alt="email icon"></a>
+                <a target="_blank"  href="mailto:jl.vinhos@gmail.com, jl.vinhos@gmail.com?cc=jl.vinhos@gmail.com &bcc=jl.vinhos@gmail.com"><img class="link-img" src="img/email icon.png" alt="email icon"></a>
                 <p>E-mail</p>
             </div>
             <div class="link-container">
