--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <title>Joel Leite - Diretor Comercial de Vendas</title>
 </head>
 <body>
+    <script type="module" src="https://unpkg.com/@splinetool/viewer@1.5.7/build/spline-viewer.js"></script>
+    <spline-viewer id="spline-viewer" url="https://prod.spline.design/pDYcFDnUVS-6kOF5/scene.splinecode"></spline-viewer>
     <div id="card-container">
         <div id="jl">
             <a download href="Cartao_Visita_JL_Vinhos.pdf"><img id="logo-img" src="img/JL logo.png" alt="logo JL"></a>
@@ -42,5 +44,6 @@
             </div>
         </div>
     </div>
+    <script src="scripts/script.js"></script>
 </body>
 </html>
